# mutrimcts

./: MANIFEST.in  README.md  TRANSFORMATION_SUMMARY.md  pyproject.toml  setup.py
.github/workflows/: ci_cd.yml
src/mutrimcts/: README.md  __init__.py  config.py  mcts_wrapper.py  py.typed
src/mutrimcts/cpp/: CMakeLists.txt  README.md  bindings.cpp  config.h  mcts.cpp  mcts.h  python_interface.h
tests/: README.md  test_muzero_mcts.py
